<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">PersonalMessage</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="red">Red</string>
    <string name="green">Green</string>
    <string name="blue">Blue</string>
    <string name="alpha">Alpha</string>
    <string name="shareCanvas">Share Canvas</string>
    <string name="clearCanvas">Clear Canvas</string>
    <string name="default_0">0</string>
    <string name="err_no_canvas_image">Unable to get image from Canvas</string>

</resources>
